--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-python-dotenv>=1.0.0
-websockets>=11.0.3 
-mcp>=1.8.1
-pydantic>=2.11.4
-mcp-proxy>=0.8.2
+python-dotenv>=1.2.1
+websockets>=15.0.1
+mcp>=1.20.0
+pydantic>=2.12.3
+mcp-proxy>=0.10.0
+fastmcp>=2.13.0.2
