--- a/mcp_config.json
+++ b/mcp_config.json
@@ -1,9 +1,9 @@
 {
   "mcpServers": {
-    "local-stdio-calculator": {
+    "local-stdio-web_search": {
       "type": "stdio",
       "command": "python",
-      "args": ["-m", "calculator"]
+      "args": ["-m", "web_search"]
     },
     "remote-sse-server": {
       "type": "sse",
